# PrivFedAE

./: .gitignore  CAE_trial.py  README.md  client_app.py  client_app_1.py  pyproject.toml  requirements.txt  server_app.py
