[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PrivFedAE"
version = "0.1.0"
description = "Privacy-Preserving Federated Autoencoder for IoT Malware Detection"
authors = [
    { name = "Kirtana S" }
]
requires-python = ">=3.10"
dependencies = [
    "flwr==1.23.0",
    "torch==2.3.1+cpu",
    "torchvision==0.18.1+cpu",
    "torchaudio==2.3.1+cpu",
    "numpy",
    "pandas",
    "scikit-learn",
]

[tool.flwr.app]
publisher = "kirtana"

[tool.flwr.app.components]
serverapp = "server_app:app"
clientapp = "client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5

[tool.flwr.federations.local-simulation.supernode]
partition-id = "{AUTO_INCREMENT}"
